evaluator/sources/1980723658.error
/eval-folder/1980723658.cpp: In function 'int main()':
/eval-folder/1980723658.cpp:6:1: error: expected ';' before '}' token
 }
 ^
